# v2ray-tui

./: Cargo.toml  README.md  ratatui_tutorial.md
.github/workflows/: release.yml
src/: app.rs  event.rs  main.rs  system_proxy.rs  test.rs  ui.rs  utils.rs
src/app/: action.rs  event.rs  mod.rs
src/components/: content.rs  footer.rs  header.rs  mod.rs
src/config/: mod.rs
src/proxy/: common.rs  hy2.rs  mod.rs  ss.rs  trojan.rs  tuic.rs  vless.rs  vmess.rs
src/singbox/: config.rs  mod.rs  process.rs
src/system/: system_proxy.rs
src/ui/: mod.rs
src/ui/components/: content.rs  footer.rs  info.rs  mod.rs  popup.rs
