[package]
name = "ladderust"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4"
crossterm = "0.29.0"
ratatui = "0.30.2"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde_json = "1.0.150"
url = "2"
urlencoding = "2.1"
serde = { version = "1", features = ["derive"] }
dirs = "6.0.0"
